
SVN
-------------------------------

XML:   Resolved issue CASTOR-1745 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update and extend comments in castorbuilder.properties
       Details: http://jira.codehaus.org/browse/CASTOR-1745
       (Edward - 20061219)

XML:   Resolved issue CASTOR-1744 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fix build for <api> links in web page
       Details: http://jira.codehaus.org/browse/CASTOR-1744
       (Edward - 20061218)

XML:   Resolved issue CASTOR-1740 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved all XMLFieldHandler-related code within DescriptorSourceFactory to new
       XMLFieldHandlerFactory.
       Details: http://jira.codehaus.org/browse/CASTOR-1740
       (Werner - 20061218)

XML:   Resolved issue CASTOR-1741 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved all *Info classes to a new builder.info package.
       Details: http://jira.codehaus.org/browse/CASTOR-1741
       (Werner - 20061218)

XML:   Resolved issue CASTOR-1720 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for validating <xsd:ID>s during marshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1720
       (Werner - 20061215)

XML:   Resolved issue CASTOR-1737 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added new ClassNameCRStrategy that simply logs such conflicts without possibility of
       user intervention.
       Details: http://jira.codehaus.org/browse/CASTOR-1737
       (Werner - 20061215)

XML:   Resolved issue CASTOR-1736 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added registry for ClassNameConflictResolutionStrategy implementations.
       Details: http://jira.codehaus.org/browse/CASTOR-1736
       (Werner - 20061214)

XML:   Resolved issue CASTOR-1539 using contribution from Edward Kuns [edward.kuns@aspect.com]